package com.example.designpattern.chainofresponsibility

/**
 * 订单信息
 * @param distance 配送位置
 */
class Order(val distance: Int) {
}